# GLC-SFM

./: .gitignore  CMakeLists.txt  FeatureMatcher.cpp  FeatureMatcher.h  ImageStream.cpp  ImageStream.h  KeyFrame.cpp  KeyFrame.h  KeyFrame.hpp  MapPaint.cpp  MapPaint.h  MapPoint.cpp  MapPoint.h  MapPoint.hpp  MediaStream.h  MyGraphics.cpp  Optimizer.cpp  Optimizer.h  SLAM.cpp  SLAM.h  VideoStream.cpp  VideoStream.h  main.cpp
DBow3/src/: Database.h  Vocabulary.h
DBow3/utils/: CMakeLists.txt
Pangolin/: CMakeLists.txt
cfg/: Bicocca.xml  calib_02.xml  calib_bicocca.xml  calib_gopro.xml  calib_gopro_wide.xml  calib_gopro_wide_nocut.xml  calib_kitti.xml  default.xml  kitti  kitti.txt  orb_build_Geometric.txt  orb_dis.txt  setting.xml  sift.txt  sift_build_Geometric.txt  sift_dis.txt  surf64.txt  surf64_bigdisparity_dis.txt  surf64_build_Geometric (copy).txt  surf64_build_Geometric.txt  surf_build_Geometric.txt  surf_lab (copy).txt  surf_lab_virtual.txt
cfg/build_old/: surf64_build_real (copy).txt
g2o/: CMakeLists.txt
pre_recall/: ArrayIndexClass.m  KeyFrameTrajectory.txt  calHistAccu.m  cal_pre_recall.asv  cal_pre_recall.m  cal_pre_recall_descs.m  cal_pre_recall_grdth.m  descs.fig  findGT.m  orb_lab_Geometric.txt  orb_lab_real.txt  sift_lab_Geometric.txt  sift_lab_real.txt  surf128_dis.txt  surf64.fig  surf64_300_6_4_angle.txt  surf64_300_6_4_dis.txt  surf64_dis.txt  surf64_lab_Geometric.txt  surf64_lab_real.txt  surf_lab_Geometric.txt  surf_lab_real.txt  surf_lab_virtual.txt
util/: compute_bow_with_angle.cpp  compute_tracked_desc_dis.cpp  compute_voc_adjecent_dis.cpp  create_voc_step0.cpp  create_voc_step1.cpp  undistortDataKittiStyle.cpp
